syntax = "proto3";

import "google/protobuf/empty.proto";
import "types.proto";

option go_package = "./proto";

service PluginService {
  rpc ListLoadedPlugins(google.protobuf.Empty) returns (ListLoadedPluginsResponse) {}
  rpc ListPlugins(google.protobuf.Empty) returns (ListPluginsResponse) {}
  rpc RunPlugin(RunPluginRequest) returns (RunPluginResponse) {}
  rpc LoadPlugin(LoadPluginRequest) returns (LoadPluginResponse) {}
}

message RunPluginRequest {
  string file_name = 1;
  map<string, string> params = 2;
}

message LoadPluginRequest {
  string file_name = 1;
}

message ListPluginsResponse {
  bool success = 1;
  repeated string names = 2;
}

message ListLoadedPluginsResponse {
  bool success = 1;
  repeated string names = 2;
}

message RunPluginResponse {
  bool success = 1;
}

message LoadPluginResponse {
  bool success = 1;
  Plugin data = 2;
}
